# licencia

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.md  pyproject.toml
.github/: dependabot.yml
licencia/: commands.py  core.py
news/: 4.misc
tests/: test_licencia.py
