[tool.poetry]
name = "licencia"
version = "0.1.0"
description = ""
authors = ["kk6 <hiro.ashiya@gmail.com>"]

[tool.poetry.scripts]
licencia = "licencia.app:application.run"

[tool.poetry.dependencies]
python = "^3.7"
cleo = "^0.7.2"
tomlkit = "^0.5.3"
beautifultable = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
