[tool.poetry]
name = "licencia"
version = "0.1.1"
description = ""
authors = ["kk6 <hiro.ashiya@gmail.com>"]

[tool.poetry.scripts]
licencia = "licencia.app:application.run"

[tool.poetry.dependencies]
python = "^3.7"
cleo = "^0.7.2"
tomlkit = "^0.5.3"
beautifultable = ">=0.6,<0.8"
importlib-metadata = ">=0.8,<0.15"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pre-commit = "^1.15"
towncrier = "^19.2"

[tool.towncrier]
package = "licencia"
filename = "CHANGELOG.rst"
directory = "news/"
title_format = "{version} ({project_date})"
template = "news/towncrier_template.rst"
issue_format = "`#{issue} <https://github.com/kk6/licencia/issues/{issue}>`_"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
