[tool.poetry]
name = "licencia"
version = "0.1.1"
description = ""
authors = ["kk6 <hiro.ashiya@gmail.com>"]

[tool.poetry.scripts]
licencia = "licencia.app:application.run"

[tool.poetry.dependencies]
python = "^3.7"
cleo = ">=0.7.2,<0.9.0"
tomlkit = ">=0.5.3,<0.8.0"
beautifultable = ">=0.6,<1.1"
importlib-metadata = ">=0.8,<3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pre-commit = "^2.7"
towncrier = "^19.2"

[tool.towncrier]
package = "licencia"
filename = "CHANGELOG.rst"
directory = "news/"
title_format = "{version} ({project_date})"
template = "news/towncrier_template.rst"
issue_format = "`#{issue} <https://github.com/kk6/licencia/issues/{issue}>`_"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
